# Rewilding-Project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: interim.py  manifest.toml  raw.py
docs/: findings.html  findings.md  index.html  learn.html  locations.html  methods.html  styles.css  visual_model.md
docs/files/: canonical_v6.json  methods.md  scenario_balanced_top_100.csv  scenario_balanced_top_100.geojson  scenario_balanced_top_100_clusters.csv
docs/locations/: cornwall.html  northern-borderland.html  somerset.html
docs/showcase/: README.md
outouts/: methods.md
outouts/candidate_clusters/: scenario_balanced_top_100_clusters.csv  scenario_balanced_top_100_clusters.geojson  scenario_balanced_top_100_clusters_summary.md
outouts/top_candidates/: scenario_balanced_top_25.csv  scenario_balanced_top_25_summary.md
outputs/: candidate_brief.md  methods.md  validation_targeted_enriched_summary.md
outputs/release/: latest.json
scripts/: build_candidate_brief.py  build_case_study_maps.py  build_inspection_map.py  build_map_app.py  build_methods_note.py  build_site.py  export_top_candidates.py  prepare_canonical_sources.py  publish_canonical_run.py  run_official_boundary_mvp.py  summarize_candidate_clusters.py  validate_enriched_model.py
src/: __init__.py  build_grid.py  canonical.py  data_manifest.py  features.py  geography.py  ingest.py  pipeline.py  provenance.py  score.py  standardise.py
tests/: test_canonical.py  test_data_manifest.py  test_features.py  test_geography.py  test_pipeline.py  test_score.py
(+24 files in other folders)
